# scalavspython-python

./: .gitignore  mnist_classifier.py  pyproject.toml
.metals/: metals.h2.db
